appId: host.exp.exponent
---
- launchApp
- waitForAnimationToEnd
- tapOn: "Email"
- inputText: ${TEST_EMAIL}
- tapOn: "Password"
- inputText: ${TEST_PASSWORD}
- tapOn: "Sign In"
- waitForAnimationToEnd
- assertVisible: "Hey,"
- assertVisible: "Reaction Board"
- assertVisible: "Vibration Meter"
