appId: host.exp.exponent
---
- launchApp
- waitForAnimationToEnd
- tapOn:
    text: "Play"
    index: 0
- assertVisible: "Tap to Start"
- tapOn: "Tap to Start"
- extendedWaitUntil:
    visible: "TAP NOW"
    timeout: 7000
- tapOn:
    point: "50%,50%"
- assertVisible: "Your reaction time"
- assertVisible: "ms"
- tapOn: "Save Score"
- assertVisible: "Saved"
